# OpenCV-FaceRecognitionDemo

./: CMakeLists.txt  README.md  main.cpp
